# thaiengine-rust

./: Cargo.toml  README.md  build.rs  creader  creader.c  reader
benches/: bench.rs
src/: cmodel.rs  creader.c  lib.rs  main.rs  model.rs
src/server/: mod.rs  server.rs
