[package]
name = "thaiengine"
version = "0.1.0"
authors = ["Manatsawin Hanmongkolchai <manatsawin+git@gmail.com>"]
build = "build.rs"

[dependencies]
radix_trie = "*"
encoding = "0.2.32"
nanomsg = {version = "0.5.0", optional = true}

[profile.release]
lto = true

[features]
default = ["assertion", "server"]
assertion = []
dump_data = []
wait_on_exit = []
server = ["nanomsg"]
