[package]
name = "thaiengine"
version = "0.1.0"
authors = ["Manatsawin Hanmongkolchai <manatsawin+git@gmail.com>"]
build = "build.rs"

[dependencies]
radix_trie = "*"
encoding = "0.2.32"
log = "0.3.5"
env_logger = "0.3.2"

[profile.release]
lto = true

[features]
default = ["assertion", "server", "color"]
assertion = []
dump_data = []
wait_on_exit = []
server = []
color = []
